Fix image paths in HTML and CSS for consistent loading

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 </head>
 <body>
   <div class="head">
-    <img src="/assets/images/logo.svg" alt="">
+    <img src="./assets/images/logo.svg" alt="">
     <div class="setting">
       <button id="setting">
-        <img src="/assets/images/icon-units.svg" alt="setting">
+        <img src="./assets/images/icon-units.svg" alt="setting">
         Units
-        <img src="/assets/images/icon-dropdown.svg" alt="">
+        <img src="./assets/images/icon-dropdown.svg" alt="">
       </button>
       <div class="setting_content">
         <button id="switch">Switch to Imperial</button>
@@ -27,11 +27,11 @@
           <div class="units">
             <button class="temp_button">
               Celsius (°C)
-              <img class="check" src="/assets/images/icon-checkmark.svg">
+              <img class="check" src="./assets/images/icon-checkmark.svg">
             </button>
             <button class="temp_button">
               Fahrenheit (°F)
-              <img class="check" src="/assets/images/icon-checkmark.svg">
+              <img class="check" src="./assets/images/icon-checkmark.svg">
             </button>
           </div>
         </div>
@@ -41,11 +41,11 @@
           <div class="units">
             <button class="speed_button">
               km/h
-              <img class="check" src="/assets/images/icon-checkmark.svg">
+              <img class="check" src="./assets/images/icon-checkmark.svg">
             </button>
             <button class="speed_button">
               mph
-              <img class="check" src="/assets/images/icon-checkmark.svg">
+              <img class="check" src="./assets/images/icon-checkmark.svg">
             </button>
           </div>
         </div>
@@ -55,11 +55,11 @@
           <div class="units">
             <button class="prec_button">
               Millimeters (mm)
-              <img class="check" src="/assets/images/icon-checkmark.svg">
+              <img class="check" src="./assets/images/icon-checkmark.svg">
             </button>
             <button class="prec_button">
               Inches (in)
-              <img class="check" src="/assets/images/icon-checkmark.svg">
+              <img class="check" src="./assets/images/icon-checkmark.svg">
             </button>
           </div>            
         </div>
@@ -70,7 +70,7 @@
 
   <div class="search">
     <div class="search_input">
-      <img src="/assets/images/icon-search.svg">
+      <img src="./assets/images/icon-search.svg">
       <input type="text" id="search" placeholder="Search for a place...">
     </div>
     <button>Search</button>
