Refactor settings button styling and layout for improved responsiveness

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <img src="./assets/images/logo.svg" alt="">
     <div class="setting">
       <button id="setting">
-        <img src="./assets/images/icon-units.svg" alt="setting">
+        <img class="setting-logo" src="./assets/images/icon-units.svg" alt="setting">
         Units
-        <img src="./assets/images/icon-dropdown.svg" alt="">
+        <img class="setting-dropdown" src="./assets/images/icon-dropdown.svg" alt="">
       </button>
       <div class="setting_content">
         <button id="switch">Switch to Imperial</button>
