--- a/index.html
+++ b/index.html
@@ -78,7 +78,10 @@
 
   <div class="content">
     <div class="content-left">
-      <div class="content-now"></div>
+      <div class="content-now">
+        <p class="city_selected"></p>
+        <p class="country_selected"></p>
+      </div>
       <div class="content-detail">
         <div>
           <h1>Feels like</h1>
@@ -112,7 +115,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/scarymode">Scarymode</a>.
   </div>
   <script src="script.js"></script>
 </body>
