--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <img src="./assets/images/logo.svg" alt="">
     <div class="setting">
       <button id="setting">
-        <img class="setting-logo" src="./assets/images/icon-units.svg" alt="setting">
+        <img src="./assets/images/icon-units.svg" alt="setting">
         Units
-        <img class="setting-dropdown" src="./assets/images/icon-dropdown.svg" alt="">
+        <img src="./assets/images/icon-dropdown.svg" alt="">
       </button>
       <div class="setting_content">
         <button id="switch">Switch to Imperial</button>
@@ -78,10 +78,7 @@
 
   <div class="content">
     <div class="content-left">
-      <div class="content-now">
-        <p class="city_selected"></p>
-        <p class="country_selected"></p>
-      </div>
+      <div class="content-now"></div>
       <div class="content-detail">
         <div>
           <h1>Feels like</h1>
@@ -115,7 +112,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/scarymode">Scarymode</a>.
+    Coded by <a href="#">Your Name Here</a>.
   </div>
   <script src="script.js"></script>
 </body>
