Add search functionality with city and country display; include country codes JSON

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <img src="./assets/images/logo.svg" alt="">
     <div class="setting">
       <button id="setting">
-        <img src="./assets/images/icon-units.svg" alt="setting">
+        <img class="setting-logo" src="./assets/images/icon-units.svg" alt="setting">
         Units
-        <img src="./assets/images/icon-dropdown.svg" alt="">
+        <img class="setting-dropdown" src="./assets/images/icon-dropdown.svg" alt="">
       </button>
       <div class="setting_content">
         <button id="switch">Switch to Imperial</button>
@@ -78,7 +78,11 @@
 
   <div class="content">
     <div class="content-left">
-      <div class="content-now"></div>
+      <div class="content-now">
+        <p class="city_selected">Paris, France</p>
+        <img class="flag" src="https://flagsapi.com/FR/flat/64.png">
+        <p class="temp_actual">10°</p>
+      </div>
       <div class="content-detail">
         <div>
           <h1>Feels like</h1>
@@ -112,7 +116,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/scarymode">Scarymode</a>.
   </div>
   <script src="script.js"></script>
 </body>
