Update country name in JSON and enhance layout for city display

--- a/index.html
+++ b/index.html
@@ -79,8 +79,10 @@
   <div class="content">
     <div class="content-left">
       <div class="content-now">
-        <p class="city_selected">Paris, France</p>
-        <img class="flag" src="https://flagsapi.com/FR/flat/64.png">
+        <div>
+          <p class="city_selected">Paris, France</p>
+          <img class="flag" src="https://flagsapi.com/FR/flat/64.png">
+        </div>
         <p class="temp_actual">10°</p>
       </div>
       <div class="content-detail">
