Add date display under city name and style adjustments for layout

--- a/index.html
+++ b/index.html
@@ -80,7 +80,10 @@
     <div class="content-left">
       <div class="content-now">
         <div>
-          <p class="city_selected">Paris, France</p>
+          <div id="now-left">
+            <p class="city_selected">Paris, France</p>
+            <p class="date"></p>
+          </div>
           <img class="flag" src="https://flagsapi.com/FR/flat/64.png">
         </div>
         <p class="temp_actual">10°</p>
